--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
                      <li><a href="#">NEWS</a></li>
                      <li><a href="#">CONTACTS</a></li>
                      <li><a href="#">PAGES</a></li>
-                </ul>
             </div>
             <div class="search right" >
                 <i class="fa fa-search" aria-hidden="true"></i>
@@ -56,15 +55,15 @@
           <div id="leftbtn"><i class="fa fa-chevron-left" aria-hidden="true"></i></div>
            <div id="rightbtn"><i class="fa fa-chevron-right" aria-hidden="true"></i></div>
         </div>
-        <div id="img" class="col4">
-            <div id="img1" class="img">
-                <img src="img/slide1.jpg">
+        <div  id="image" class="col4">
+            <div  id="img1" class="img active">
+                <img index="1" src="img/slide1.jpg">
             </div>
-            <div id="img2" class="img">
-                <img src="img/slide2.jpg">
+            <div  id="img2" class="img">
+                <img index="2" src="img/slide2.jpg">
             </div>
-            <div id="img3" class="img">
-                <img src="img/slide3.jpg">
+            <div  id="img3" class="img">
+                <img index="3" src="img/slide3.jpg">
             </div>
         </div>
         <div class="col3 right">
@@ -110,8 +109,8 @@
             <h2><b>Multi-purpose</b> WordPress Theme</h2>
             <p>We tried to make very high-quality product and so our code is very neat and clean. Whatever anyone could improve and modify the template to your liking.</p>
             <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-            <a class="btn one">
-                <span data-hover='yes i want it'>BYU THIS THEME</span>
+            <a class="btn one hoverable">
+                <span class="normal">BYU THIS THEME</span><span class="hover">YES I WANT IT</span>
             </a>
             <a class="btn two">VIEW MORE TEMPLATES</a>
         </div>
